added setting & CodeBlock.tsx

--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,28 @@
 :root {
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: #ffffffde;
+  color: #aaccee;
+  /* background-color: #242424; */
+  background-color: #225588;
 }
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: monospace;
+}
+
+/* Удаление стрелок для input с типом number */
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+input[type="number"],
+input[type="number"]:hover,
+input[type="number"]:focus {
+  appearance: none;
+  -moz-appearance: textfield;
 }
