global design change

--- a/src/components/SettingsShapes/Width/index.module.scss
+++ b/src/components/SettingsShapes/Width/index.module.scss
@@ -1,18 +1,10 @@
 .widthSliderContainer {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-  background-color: #0000001A;
-  padding: 10px;
-  border-radius: 5px;
+
   margin-top: 30px;
 
   font-family: monospace;
 
-  p {
-    display: inline-block;
-    width: 50px;
-    text-align: right;
-    vertical-align: middle;
+  p{
+    color: #636388;
   }
 }
