--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   color: #ffffffde;
   color: #aaccee;
   /* background-color: #242424; */
-  background-color: #225588;
+  background-color: #f8f9fb;
 }
 
 * {
