--- a/src/components/SettingsShapes/Height/index.module.scss
+++ b/src/components/SettingsShapes/Height/index.module.scss
@@ -1,18 +1,8 @@
 .heightSliderContainer {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-  background-color: #0000001A;
-  padding: 10px;
-  border-radius: 5px;
   margin-top: 30px;
 
-  font-family: monospace;
-
   p {
-    display: inline-block;
-    width: 50px;
-    text-align: right;
-    vertical-align: middle;
+    font-family: monospace;
+    color: #636388;
   }
 }
