--- a/src/layouts/index.module.scss
+++ b/src/layouts/index.module.scss
@@ -1,7 +1,8 @@
 .mainBlock {
-    h1 {
-        text-align: center;
-        margin: 10px 0px 20px;
-        font-family: monospace;
-    }
+  h1 {
+    text-align: center;
+    margin: 10px 0px 20px;
+    font-family: monospace;
+    color: #636388;
+  }
 }
